@@ -234,6 +234,7 @@ shown_inline_pnp = 1
 # and service extinfo details page.
 # can be specified more than once to define multiple
 # variables. You may use html in your variables.
+# Use * as wildcard, ex.: _VAR*
 #show_custom_vars = _VAR1
 #show_custom_vars = _VAR2
 
